# LearnCppNotes

./: .gitignore  CMakeLists.txt
HelloWorld/: CMakeLists.txt  HelloWorld  HelloWorld.cpp  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  Random.h  add2.cpp  add2.h  ch10s4.cpp  ch10s4.h  ch10s5.cpp  ch10s5.h  ch10s6.cpp  ch10s6.h  ch4q2.cpp  ch4q2.h  ch4q3.cpp  ch4q3.h  ch5quiz  ch5quiz.cpp  ch5quiz.h  ch5s7q1.cpp  ch5s7q1.h  ch6quiz.cpp  ch6quiz.h  ch6s3q2.cpp  ch6s3q2.h  ch76.cpp  ch78.cpp  ch7s10.cpp  ch7s10.h  ch7s11.cpp  ch7s11.h  ch7s12.cpp  ch7s12.h  ch7s3.cpp  ch7s3.h  ch7s6.h  ch7s7.cpp  (+24 more)
HelloWorld/HelloWorld/x64/Debug/: HelloWorld.exe.recipe  HelloWorld.ilk  vc143.idb
HelloWorld/HelloWorld/x64/Debug/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MultiplyByTwo/: CMakeLists.txt  MultiplyByTwo.cpp  MultiplyByTwo.sln  MultiplyByTwo.vcxproj  MultiplyByTwo.vcxproj.filters
MultiplyByTwo/MultiplyByTwo/x64/Debug/: MultiplyByTwo.exe.recipe  MultiplyByTwo.ilk  vc143.idb
MultiplyByTwo/MultiplyByTwo/x64/Debug/MultiplyByTwo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MultiplyByTwo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  (+1 more)
PrintLanguageStandard/: CMakeLists.txt  PrintLanguageStandard.sln  PrintLanguageStandard.vcxproj
PrintLanguageStandard/PrintLan.66db2779/x64/Debug/: PrintLanguageStandard.exe.recipe  PrintLanguageStandard.ilk  vc143.idb
(+9 files in other folders)
